--- a/index.html
+++ b/index.html
@@ -6,18 +6,6 @@
         <title>A page.</title>
     </head>
     <body>
-        <div class="main">
-            <div class="sub"><p>Pirmas</p></div>
-            <div class="sub"><p>Antras</p></div>
-            <div class="sub"><p>Trecias</p></div>
-        </div>
-        <div class="kortele">
-            <div class="nuotrauka">
-                <img src="dat-boi.png" alt="Dat boi" height="150px">
-            </div>
-            <div class="text">
-                <p id="vidurys">Stai ateina bernuzelis!</p>
-            </div>
-        </div>
+            <a href="page.html">Divu bandymo page</a>
     </body>
 </html>
