--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     </head>
     <body>
             <a href="page.html">Divu bandymo page</a>
+            <a href="blog.html">Blogas</a>
     </body>
 </html>
