--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>A page.</title>
     </head>
     <body>
-            <a href="page.html">Divu bandymo page</a>
-            <a href="blog.html">Blogas</a>
+        <p><a href="page.html">Divu bandymo page</a></p>
+        <p><a href="blog.html">Blogas</a></p>
     </body>
 </html>
