--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <p><a href="page.html">Divu bandymo page</a></p>
+        <p><a href="antras.html">Receptai</a></p>
         <p><a href="blog.html">Blogas</a></p>
     </body>
 </html>
